[package]
name = "parfait"
version = "0.1.0"
authors = ["ladroid"]
description = """
Most lightweight and easy to use web framework.
"""
edition = "2021"
license = "Apache-2.0"
categories = ["web-programming::http-server"]
keywords = ["framework", "web", "async", "tokio", "futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.1"
serde = { version = "1.0.196", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[example]]
name = "test"
path = "examples/test.rs"